@@ -69,9 +69,10 @@ sub read_config_file {
 
 			next if not length or $_ =~ /^\s*#/;
 
-			my ($k, $v) = / ^ \s* (user|password) \s+ (.+?) \s* $ /x;
-			Carp::croak "Multiple enties for $k" if $conf{$k};
-			$conf{$k} = $v;
+			if (my ($k, $v) = / ^ \s* (user|password) \s+ (.+?) \s* $ /x) {
+				Carp::croak "Multiple enties for $k" if $conf{$k};
+				$conf{$k} = $v;
+			}
 		}
 	}
 	Carp::croak('No user set in configuration file')     if not $conf{user};
